<resources>
    <string name="app_name">QuickCashTeam6</string>
    <string name="post_job">Post Job</string>
    <string name="EMPTY_JOB_TITLE">Job Title is a required field</string>
    <string name="EMPTY_PAYMENT">Payment is a required field</string>
    <string name="EMPTY_SKILLS">Skills is a required field</string>
    <string name="EMPTY_START_TIME">Start time is a required field</string>
    <string name="EMPTY_JOB_DESCRIPTION">Description is a required field</string>
    <string name="NO_NAME_TOAST">Please choose only 5 skills</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_view_location_map">ViewLocationMap</string>
    <string name="OPEN_STATUS">Available</string>
    <string name="IN_PROGRESS_STATUS">In-Progress</string>
    <string name="CLOSED_STATUS">Completed</string>

</resources>