...
        android:layout_marginEnd="312dp"
        android:text="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/postJobButton"
        android:layout_width="126dp"
        android:layout_height="74dp"
        android:backgroundTint="#49199E"
        android:text="@string/post_job"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"
        app:rippleColor="#9C27B0" />

    <Button
        android:id="@+id/moveToRecommend"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:backgroundTint="#49199E"
        android:text="Employee Recommendations"
        app:iconTint="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
...
