<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:andriod="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    andriod:layout_height="match_parent"
    andriod:layout_width="match_parent"
    andriod:orientation="vertical">

    <fragment
        andriod:id="@+id/map"
        andriod:name="com.google.android.gms.maps.SupportMapFragment"
        andriod:layout_width="match_parent"
        andriod:layout_height="644dp"
        tools:context=".MapsActivity" />

    <Button
        andriod:id="@+id/setLocation"
        andriod:layout_width="match_parent"
        andriod:layout_height="49dp"
        andriod:text="Set Location"></Button>

    <LinearLayout
        andriod:layout_width="match_parent"
        andriod:layout_height="match_parent"
        andriod:orientation="horizontal">

    </LinearLayout>

</LinearLayout>

