...
        android:text="Login"
        android:textStyle="bold"
        android:padding="5dp"
        android:textAllCaps="false"
        />

    <TextView android:id="@+id/registrationLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:layout_margin="10dp"
...
